--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
                 <input type="text" id="search" name="search" placeholder="Search a city">
             </form>
         </div>
-        <div class="location"></div>
+        <div class="location">Asheville</div>
         <div class="date-time">
-            <div class="date"></div>
-            <div class="time"></div>
+            <div class="date">Mon January 01 2023</div>
+            <div class="time">12:00</div>
         </div>
         <div class="middle">
             <div class="temperatures">
-                <div class="high"></div>
-                <div class="current"></div>
-                <div class="low"></div>
+                <div class="high">0</div>
+                <div class="current">0</div>
+                <div class="low">0</div>
             </div>
 
             <div class="condition">
-                <img src="" class="condition-icon">    
-                <div class="condition-text"></div>
+                <img src="sunny.svg" class="condition-icon">    
+                <div class="condition-text">sunny</div>
             </div>
         </div>
 
         <footer>
-            <img src="" alt="" class="wind-icon">
-            <div class="wind"></div>
+            <img src="wind.svg" alt="" class="wind-icon">
+            <div class="wind">0mph</div>
         </footer>
     </main>
 </body>
